--- a/API/apollo_api_services/pom.xml
+++ b/API/apollo_api_services/pom.xml
@@ -129,6 +129,13 @@
             <version>3.2.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>7.1.8</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
