--- a/API/apollo_api_services/src/main/resources/application.properties
+++ b/API/apollo_api_services/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=9999
 
 # Database Properties
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Apollo103;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Apollo;encrypt=true;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
